# entsoe-scraper

./: .gitignore  CHANGELOG.md  LICENSE  README.md  entsoe_api.py  pyproject.toml
docs/: .buildinfo  entsoe_api.enums.code_bindings.html  entsoe_api.enums.html  entsoe_api.html  entsoe_api.parser.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  searchindex.js
docs/_sources/: entsoe_api.enums.code_bindings.rst.txt  entsoe_api.enums.rst.txt
entsoe_api/: api.py  exceptions.py  utils.py
entsoe_api/enums/: __init__.py  code_binding.py  exceptions.py
entsoe_api/enums/code_bindings/: business_type.py  doc_status.py  document_type.py  domain_type.py  process_type.py  psr_type.py
entsoe_api/parser/: data_parser.py  exceptions.py  parser_interface.py
entsoe_api/parser/parser_extensions/: price_data_parser.py  production_data_parser.py
entsoe_api/scripts/: entsoe_fetcher.py
notebooks/: data_analysis.ipynb
sphinx_docs/source/: conf.py  entsoe_api.parser.rst  index.rst
